# pdf2data

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: python-app.yml
backend/: pyproject.toml
backend/application/: server.py
client/: Dockerfile  package.json
client/src/: App.js  App.scss  README.md
docker/flower/: Dockerfile
docker/web/: Dockerfile
docker/worker/: Dockerfile
frontend/application/: package.json
frontend/application/src/: App.js
server/: Dockerfile  Makefile  db.sqlite  extractpdf.py  pyproject.toml  requirements.txt  run.py
server/application/: .models.py.swp  __init__.py  annotator.py  celeryconfig.py  constants.py  feat_extract.py  handlers.py  models.py  preprocessing.py  projects.py  schemas.py  search.py  server.py  storage.py  tasks.py  temp.py  utils_files.py
server/application/features/: __init__.py  block_features.py  feature_parsing.py  features.py  line_features.py  page_features.py  test_imp.py  utils_feat.py
server/application/storage/: 270df3152af7438c942954e1f8386452_20210525_design_Input_19_05_21.mat_e13.mat  4e13b9e319d2440aa22a45456b437bf7_20210525_design_Input_19_05_21.mat_e14.mat  72c6e5db6a374b3a9a7bf170f37f3b94_S_20027168.xml  e1d0b94eb434476c9ba01c6bfdcab0e1_20210525_design_Input_19_05_21.mat_e6.mat  fe5382808175468ea6801c4b9a734ebe_20210525_design_Input_19_05_21.mat_e18.mat  ff190d1e458d4723a266d2464e5a9e5b_20210525_design_Input_19_05_21.mat_e4.mat  test.xml
server/docs/: functions_per_form.md
server/tests/: test_backend.py  test_handlers.py  test_schemas.py
(+161 files in other folders)
