[tool.poetry]
name = "P2D-backend"
version = "0.1.0"
description = ""
authors = ["jordaycs <jordaycs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
